added logic for generating eco-news, fixed bug with getting 500 response code, small changes in logic, added endpoint to SecurityConfig