@@ -1,6 +1,8 @@
 package greencity.service;
 
-import greencity.constant.ErrorMessage;
+import static greencity.constant.OpenAIConstants.*;
+
+import greencity.enums.Language;
 import lombok.Setter;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.core.ParameterizedTypeReference;
@@ -11,11 +13,8 @@ import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpMethod;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.client.RestTemplate;
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
+
+import java.util.*;
 
 @Setter
 @Slf4j
@@ -31,39 +30,92 @@ public class OpenAIServiceImpl implements OpenAIService {
         this.restTemplate = restTemplate;
     }
 
+    @SuppressWarnings("checkstyle:WhitespaceAround")
     @Override
-    public String makeRequest(String prompt) {
-        HttpHeaders headers = new HttpHeaders();
-        headers.add("Authorization", "Bearer " + apiKey);
-        headers.add("Content-Type", "application/json");
+    public String makeRequest(Language language, String prompt) {
+        String validationError = validateRequestParameters(prompt);
+        if (validationError != null) {
+            return validationError;
+        }
 
-        Map<String, Object> body = new HashMap<>();
-        body.put("model", "gpt-4o-mini");
-        List<Map<String, String>> messages = new ArrayList<>();
-        messages.add(Map.of("role", "user", "content", prompt));
-        body.put("messages", messages);
-        body.put("max_tokens", 450);
-        body.put("temperature", 0.8);
+        HttpHeaders headers = createHttpHeaders();
+        Map<String, Object> body = createRequestBody(language, prompt);
+
+        return sendRequest(headers, body);
+    }
+    private String sendRequest(HttpHeaders headers, Map<String, Object> body) {
         HttpEntity<Map<String, Object>> request = new HttpEntity<>(body, headers);
         try {
             ResponseEntity<Map<String, Object>> response = restTemplate.exchange(
-                apiUrl,
-                HttpMethod.POST,
-                request,
-                new ParameterizedTypeReference<>() {
-                });
+                    apiUrl,
+                    HttpMethod.POST,
+                    request,
+                    new ParameterizedTypeReference<>() {
+                    }
+            );
 
-            return Optional.ofNullable(response)
-                .map(ResponseEntity::getBody)
-                .filter(responseBody -> responseBody.containsKey("choices"))
-                .map(responseBody -> (List<Map<String, Object>>) responseBody.get("choices"))
-                .filter(choices -> !choices.isEmpty())
-                .map(choices -> choices.get(0))
-                .map(choice -> (Map<String, Object>) choice.get("message"))
-                .map(message -> (String) message.get("content"))
-                .orElse(ErrorMessage.OPEN_AI_IS_NOT_RESPONDING);
+            Map<String, Object> responseBody = response.getBody();
+            if (responseBody == null) {
+                return ERROR_INVALID_OPENAI_RESPONSE;
+            }
+
+            return Optional.ofNullable(responseBody.get(RESPONSE_CHOICES_KEY))
+                    .filter(choices -> choices instanceof List<?> && !((List<?>) choices).isEmpty())
+                    .map(choices -> (List<?>) choices)
+                    .flatMap(choices -> Optional.ofNullable(choices.getFirst()))
+                    .filter(choice -> choice instanceof Map<?, ?>)
+                    .map(choice -> (Map<?, ?>) choice)
+                    .flatMap(choice -> Optional.ofNullable(choice.get(RESPONSE_MESSAGE_KEY)))
+                    .filter(message -> message instanceof Map<?, ?>)
+                    .map(message -> (Map<?, ?>) message)
+                    .flatMap(message -> Optional.ofNullable(message.get(RESPONSE_JSON_CONTENT_KEY)))
+                    .filter(content -> content instanceof String && !((String) content).isEmpty())
+                    .map(content -> (String) content)
+                    .orElse(ERROR_INVALID_OPENAI_RESPONSE);
         } catch (Exception e) {
-            return ErrorMessage.OPEN_AI_IS_NOT_RESPONDING;
+            return ERROR_NO_OPENAI_RESPONSE;
         }
+    }
+    private Map<String, Object> createRequestBody(Language language, String prompt) {
+        Map<String, Object> body = new HashMap<>();
+        body.put(REQUEST_MODEL_KEY, OPENAI_MODEL_NAME);
+
+        List<Map<String, String>> messages = new ArrayList<>();
+        messages.add(Map.of(
+                RESPONSE_ROLE_KEY,
+                ROLE_SYSTEM,
+                RESPONSE_JSON_CONTENT_KEY,
+                String.join(" ",
+                        AI_ROLE_POLICY,
+                        AI_MAX_TOKENS_POLICY,
+                        AI_HEADINGS_POLICY,
+                        AI_LANGUAGE_POLICY.formatted(language.getDisplayName())
+                )
+        ));
+        messages.add(Map.of(RESPONSE_ROLE_KEY, ROLE_USER, RESPONSE_JSON_CONTENT_KEY, String.join(" ", prompt, AI_LANGUAGE_POLICY.formatted(language.getDisplayName()))));
+        body.put(REQUEST_MESSAGES_KEY, messages);
+        body.put(REQUEST_MAX_TOKENS_KEY, 1000);
+        body.put(REQUEST_TEMPERATURE_KEY, 0.5);
+
+        return body;
+    }
+    private HttpHeaders createHttpHeaders() {
+        HttpHeaders headers = new HttpHeaders();
+        headers.add(OPENAI_AUTH_HEADER, OPENAI_BEARER_PREFIX + apiKey);
+        headers.add(OPENAI_CONTENT_TYPE_HEADER, OPENAI_APPLICATION_JSON);
+        return headers;
+    }
+    private String validateRequestParameters(String prompt) {
+        Map<Object, String> validationResults = Map.of(
+                apiKey, ERROR_API_KEY_MISSING,
+                apiUrl, ERROR_API_URL_MISSING,
+                prompt, ERROR_PROMPT_MISSING
+        );
+        return validationResults.entrySet().stream()
+                .filter(entry -> Objects.isNull(entry.getKey()) ||
+                        entry.getKey().toString().isEmpty())
+                .map(Map.Entry::getValue)
+                .findFirst()
+                .orElse(null);
     }
 }
